--- a/src/components/common/input-styles.css
+++ b/src/components/common/input-styles.css
@@ -7,16 +7,22 @@ input[type=text], select {
     width: 20rem;
 }
 
-textarea {
+.textArea-input {
     width: 20rem;
-    height: 400px;
+    height: 20rem;
     margin: .5rem;
     box-sizing: border-box;
     border: 2px solid cadetblue;
     border-radius: 4px;
     background-color: #f8f8f8;
+    resize: vertical;
+}
+
+.select-input {
+    border: 2px solid cadetblue;
 }
 
 select {
     width: 100%;
+    border: 2px solid cadetblue;
 }
